scwcom-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scwcom
  labels:
    app: scwcom
spec:
  selector:
    matchLabels:
      app: scwcom
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scwcom
    spec:
      containers:
      - image: jkozik/scw.com:v1.10a
        name: scwcom
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            ephemeral-storage: 10M
            memory: 100M
          limits:
            ephemeral-storage: 20M
            memory: 200M
        ports:
        - containerPort: 80
          name: scwcom
