scwcom-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scwcom-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sancapweather.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: scwcom
            port:
              number: 80
